// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressiveImage /> should render initial component 1`] = `
<ProgressiveImage
  placeholder="https://placehold.it/40x30"
  url="https://placehold.it/800x600"
>
  <div>
    <img
      className="placeholder"
      style={
        Object {
          "backgroundImage": "url('https://placehold.it/40x30')",
        }
      }
    />
    <img
      onLoad={[Function]}
      src="https://placehold.it/800x600"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</ProgressiveImage>
`;

exports[`<ProgressiveImage /> should replace fuzzy tiny image with sharp large one after image onload 1`] = `
<ProgressiveImage
  placeholder="https://placehold.it/40x30"
  url="https://placehold.it/800x600"
>
  <div>
    <img
      className="placeholder sharp"
      style={
        Object {
          "backgroundImage": "url('https://placehold.it/800x600')",
        }
      }
    />
    <img
      onLoad={[Function]}
      src="https://placehold.it/800x600"
      style={
        Object {
          "display": "none",
        }
      }
    />
  </div>
</ProgressiveImage>
`;
